fix small bugs on IE

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -59,7 +59,6 @@ h1 {
 /*--------------------------------------------------------------
 # Home - First Section
 --------------------------------------------------------------*/
-
 .logo {
   height: 100px;
   padding-left: 30px;
@@ -178,7 +177,6 @@ header {
 }
 /* Button next section on Homepage
 	 ========================================================================== */
-
 .scroll {
   text-align: center;
   padding-top: 300px;
@@ -225,7 +223,6 @@ header {
 /*--------------------------------------------------------------
 # About me - Second Section
 --------------------------------------------------------------*/
-
 #about-section {
   margin: 0 auto;
   max-width: 1400px;
@@ -263,7 +260,6 @@ h3 {
 }
 
 #profile-img {
-  max-height: 600px;
   max-width: 100%;
   margin-right: 20px;
   border-radius: 10px;
@@ -277,13 +273,18 @@ h3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   -ms-flex-pack: distribute;
   justify-content: space-around;
   padding-top: 50px;
 }
 
 .about-category {
-  width: 25%;
   text-align: center;
 }
 
@@ -355,7 +356,6 @@ h3 {
 /*--------------------------------------------------------------
 # My Projects - Third Section
 --------------------------------------------------------------*/
-
 .portfolio {
   height: auto;
 }
@@ -480,6 +480,7 @@ h3 {
   opacity: 0.4;
 }
 /* The Modal (background) */
+
 .modal {
   display: none;
   /* Hidden by default */
@@ -503,6 +504,7 @@ h3 {
   /* Black w/ opacity */
 }
 /* Modal Content */
+
 .modal-content {
   background-color: #fefefe;
   margin: auto;
@@ -518,6 +520,7 @@ h3 {
   opacity: 1;
 }
 /* The Close Button */
+
 .fa-times {
   color: #aaaaaa;
   display: -webkit-box;
@@ -554,7 +557,6 @@ h6 {
 /*--------------------------------------------------------------
 # Contact me - Fourth Section
 --------------------------------------------------------------*/
-
 form {
   max-width: 1000px;
   margin: 0 auto;
@@ -614,7 +616,6 @@ button:hover {
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
-
 .footer {
   background-color: #34373d;
   height: 125px;
@@ -1310,11 +1311,25 @@ button:hover {
   #about-section {
     width: 90%;
   }
+
+  .about-category {
+    max-width: 25%;
+    text-align: center;
+  }
 }
 /* # Large Desktops
 --------------------------------------------------------------*/
 @media (min-width: 1281px) {
   #about-section {
     width: 90%;
+  }
+
+  .wrapper-skills {
+    padding-top: 70px;
+  }
+
+  .about-category {
+    max-width: 25%;
+    text-align: center;
   }
 }
